lab3/lab3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab3-ingress
  labels:
    app: lab3
spec:
  tls:
    - secretName: test-tls
      hosts:
        - wildmaus.com
  rules:
  - host: wildmaus.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lab3-service
            port:
              number: 3000
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 8080
